# Frontend-UI-Email-Code-Auth

backend/: README.md  pyproject.toml
backend/app/: admin.py  auth.py  auth_utils.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: .eslintrc.cjs  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/Auth/: AuthContext.js  AuthContext.jsx  Dashboard.jsx  ForgotPassword.jsx  ProtectedRoute.jsx  VerifyEmail.jsx
frontend/src/components/Home/: Auth.jsx  Hero.jsx  Navbar.jsx
